<resources>
    <string name="app_name">News</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_video">Video</string>
    <string name="title_profile">Profile</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="option_menu_search">Search</string>
    <string name="login_email">Email address (required)</string>
    <string name="login_password">Password (required)</string>
    <string name="login_forgot_password">Forgot password</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_dont_have_an_account">Don\'t have an account?</string>
    <string name="login_create_a_new_account">Create a new account</string>
    <string name="profile_title">Profile Page</string>
    <string name="profile_description">This is the place where your favorite articles are saved!</string>
    <string name="register_create_your_account">Create Your Account</string>
    <string name="register_required_field">* required field</string>
    <string name="register_first_name">First name*</string>
    <string name="register_last_name">Last name*</string>
    <string name="register_email_address">Email address*</string>
    <string name="register_create_account">Create Account</string>
    <string name="register_password">Password*</string>
    <string name="setting_delete_all_bookmark">Log out</string>
    <string name="setting_delete_all_bookmarks">Delete all bookmarks</string>
    <string name="bookmark">Bookmark</string>
    <string name="share_content">This is so hot: </string>
    <string name="share_title">this is the latest news</string>
    <string name="tab_genral">general</string>
    <string name="tab_business">business</string>
    <string name="tab_entertainment">entertainment</string>
    <string name="tab_health">health</string>
    <string name="tab_science">science</string>
    <string name="tab_sports">sports</string>
    <string name="tab_technology">technology</string>
    <string name="login_username_pass_invalid">Your username or password is invalid!!!</string>
    <string name="news_list_noti_login_to_save_bookmark">You need to log in to save the bookmark</string>
    <string name="profile_delete_bookmark">Delete</string>
    <string name="register_must_fill_in_all_fields">You need to fill in all fields above!</string>
    <string name="register_sign_up_success">Congrats!! You signed up successfully!!</string>
    <string name="notification_delete_all_bookmarks">Are you sure that you want to delete all bookmarks?</string>
    <string name="notification_delete_one_bookmark">Do you want to delete this bookmark:\n</string>
    <string name="notification_ok">OK</string>
    <string name="notification_cancel">Cancel</string>
</resources>