<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="194dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo_news" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="36dp"
            android:text="@string/login_email"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <EditText
            android:id="@+id/edtEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:background="@drawable/edt_background"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="@+id/tv_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register_password"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/edtEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/edtEmailAddress" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:layout_marginEnd="20dp"
            android:inputType="numberPassword"
            android:background="@drawable/edt_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_password" />


        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:padding="10dp"
            android:autoLink="all"
            android:clickable="true"
            android:text="@string/login_forgot_password"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/edtPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            android:focusable="true"/>

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/black"
            android:text="@string/login_sign_in"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/tv_dont_have_Account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_dont_have_Account"
            app:layout_constraintBottom_toBottomOf="@id/tv_dont_have_Account"/>

        <TextView
            android:id="@+id/tv_dont_have_Account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/login_dont_have_an_account"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@color/white"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_create_new_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/btn_create_new_account"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:backgroundTint="@color/white"
            android:text="@string/login_create_a_new_account"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="#000000"
            app:strokeWidth="1sp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
